--- a/index.html
+++ b/index.html
@@ -28,10 +28,7 @@
 			//fov, aspect ratio, near, far
 			camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 1000 );
 			scene.add(camera);
-			renderer = new THREE.WebGLRenderer();
-			renderer.setSize( window.innerWidth, window.innerHeight);
 			
-			document.getElementById('bearly').appendChild(renderer.domElement);
 			//this probably did work, but
 			//I never knew because I didn't have an event listener for the mouseclick
 			/*(function(){$("#bearly").append( renderer.domElement );
@@ -47,7 +44,7 @@
 			bearly.onMouseClick = function( event ) {
 				event.preventDefault();
 				click(mouse2d.x, mouse2d.y);
-			};*/
+			};*///also I moved this all to the bottom of the init
 			
 			//pulseBox
 			var pulseGeo = new THREE.IcosahedronGeometry();
@@ -81,6 +78,28 @@
 			scene.add(torK);
 			torK.position.y = 15;
 			
+			geometry = new THREE.CylinderGeometry( 0, 8, 32, 3 );
+			geometry.rotateX( Math.PI / 2 );
+
+			var material = new THREE.MeshNormalMaterial();
+
+			for ( var i = 0; i < 500; i ++ ) {
+
+				var mesh = new THREE.Mesh( geometry, material );
+				mesh.position.x = Math.random() * 1000 - 500;
+				mesh.position.y = Math.random() * 1000 - 500;
+				mesh.position.z = Math.random() * 1000 - 500;
+				mesh.scale.x = mesh.scale.y = mesh.scale.z = Math.random() * 4 + 2;
+				scene.add( mesh );
+
+			}
+			
+			geometry = new THREE.CylinderGeometry( 0, 10, 100, 3 );
+			material = new THREE.MeshBasicMaterial({color:0xEE23EE});
+			var tri = new THREE.Mesh(geometry,material);
+			scene.add(tri);
+			tri.position.x=-6;
+			
 			
 			// create a point light
 			pointLight = new THREE.PointLight(0xF8D898);
@@ -103,7 +122,14 @@
 			plane.position.z = -5;
 			
 			camera.position.z = 20;
-		
+			
+			renderer = new THREE.WebGLRenderer();
+			renderer.setClearColor( 0xffffff );
+			renderer.setPixelRatio( window.devicePixelRatio );
+			renderer.setSize( window.innerWidth, window.innerHeight );
+			renderer.sortObjects = false;
+			document.getElementById('bearly').appendChild(renderer.domElement);
+			
 			//setupSkybox();
 			controls = new controls(pulseBox, document.getElementById('bearly'));
 			controls.movementSpeed = 100;
@@ -125,6 +151,14 @@
 			camera.rotation.z = -90 * Math.PI/180;
 			camera.rotation.y = -60 * Math.PI/180;
 			//camera.lookAt(pulseBox);
+			
+			/*if set between 0 and 1000 all triangles will point at player
+			 *solution isn't sustainable, right
+			 *was i=1,l=scene.children.length,i<l
+			*/
+			for ( var i = 1; i < 500; i ++ ) {
+				//scene.children[ i ].lookAt( pulseBox.position );
+			}
 			
 			//playerMovement();
 			torPhys();
